objects/Related_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>Related_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Contacts (Related Contact)</relationshipLabel>
        <relationshipName>Related_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse / Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Related Contact</label>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>Related Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>